testsuite/tests/th/T23829_tardy.ghc.stderr
[1 of 2] Compiling Main             ( T23829_tardy.hs, T23829_tardy.o )
T23829_tardy.hs:9:15: warning: [GHC-86357] [-Wbadly-levelled-types (in -Wdefault)]
    Level error: a is used at level 1 but is bound at level 0

T23829_tardy.hs:12:19: warning: [GHC-86357] [-Wbadly-levelled-types (in -Wdefault)]
    Level error: a is used at level 1 but is bound at level 0

T23829_tardy.hs:15:20: warning: [GHC-86357] [-Wbadly-levelled-types (in -Wdefault)]
    Level error: a is used at level 1 but is bound at level 0

[2 of 2] Linking T23829_tardy
